clusters/home-cluster/apps/qbittorrent/qbittorrent-service-torrent.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-service-torrent
spec:
  type: NodePort
  selector:
    app: qbittorrent
  ports:
    - protocol: UDP
      name: torrent-udp
      port: 6881
      targetPort: 6881
      nodePort: 30007
    - protocol: TCP
      name: torrent-tcp
      port: 6881
      targetPort: 6881
      nodePort: 30007
