clusters/home-cluster/apps/qbittorrent/qbittorrent-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-service
spec:
  selector:
    app: qbittorrent
  ports:
    - protocol: TCP
      name: webui
      port: 8080
      targetPort: 8080
