clusters/home-cluster/apps/qbittorrent/gateway-tcp.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: my-tcp-gateway
spec:
  gatewayClassName: my-tcp-gateway-class
  listeners:
  - name: bittorrent
    protocol: TCP
    port: 6881
    allowedRoutes:
      kinds:
      - kind: TCPRoute
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: tcp-bittorrent-6881
spec:
  parentRefs:
  - name: my-tcp-gateway
    sectionName: bittorrent
  rules:
  - backendRefs:
    - name: qbittorrent-bittorrent
      port: 6881
