clusters/home-cluster/apps/qbittorrent/qbittorrent-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent-route
  namespace: default
spec:
  parentRefs:
  - name: bacterio-gw
  hostnames:
  - "qbittorrent.carles.cc"
  rules:
  - backendRefs:
    - name: qbittorrent-service
      port: 8080
